k8s/ms-ecommerce-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ecommerce
  namespace: syncra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-ecommerce
  template:
    metadata:
      labels:
        app: ms-ecommerce
    spec:
      containers:
        - name: ms-ecommerce
          image: syncra/ms-ecommerce:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: ms-ecommerce
  namespace: syncra
spec:
  selector:
    app: ms-ecommerce
  ports:
    - port: 8083
      targetPort: 8083
