k8s/ms-hichem-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-hichem
  namespace: syncra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-hichem
  template:
    metadata:
      labels:
        app: ms-hichem
    spec:
      containers:
        - name: ms-hichem
          image: syncra/ms-hichem:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: ms-hichem
  namespace: syncra
spec:
  selector:
    app: ms-hichem
  ports:
    - port: 8085
      targetPort: 8085
