k8s/ms-wellbeing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-wellbeing
  namespace: syncra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-wellbeing
  template:
    metadata:
      labels:
        app: ms-wellbeing
    spec:
      containers:
        - name: ms-wellbeing
          image: syncra/ms-wellbeing:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ms-wellbeing
  namespace: syncra
spec:
  selector:
    app: ms-wellbeing
  ports:
    - port: 8084
      targetPort: 8084
